# dearc

./: README.md  cli.py  dearc.py  main.py  pyproject.toml
